--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 {% load static %}
 {% load user_agents %}
+
 <head>
     <meta name="author" content="Byosehano">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="https://byosehano.com{% static 'apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="https://byosehano.com{% static 'favicon-32x32.png' %}">
@@ -16,27 +17,51 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="google-site-verification" content="xwK6KipA6VMe9lYQEZbPwTociOzJSy59qAEJ1iEil3Y" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171717652-1"></script>
-    <script data-ad-client="ca-pub-3242762948116825" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    
+    <script data-ad-client="ca-pub-3242762948116825" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PF9LGMM');
+    </script>
+    <!-- End Google Tag Manager -->
     {% block metadatas %}
-      <!-- Primary Meta Tags -->
-        <title>Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino</title>
-        <meta name="title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
-        <meta name="description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
+    <!-- Primary Meta Tags -->
+    <title>Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino</title>
+    <meta name="title"
+        content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
+    <meta name="description"
+        content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://byosehano.com/">
-        <meta property="og:title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
-        <meta property="og:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
-        <meta property="og:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://byosehano.com/">
+    <meta property="og:title"
+        content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
+    <meta property="og:description"
+        content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
+    <meta property="og:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
 
-        <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://byosehano.com/">
-        <meta property="twitter:title" content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
-        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
-        <meta property="twitter:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://byosehano.com/">
+    <meta property="twitter:title"
+        content="Byosehano | Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino">
+    <meta property="twitter:description"
+        content="Byosehano ni urubuga rukugezaho amakuru atandukanye anjyanye na Sobanukirwa, Imikino, Ikoranabuhanga, Ubuzima, Politiki, Urukundo, no Hirya no Hino nibindi byinshi bitandukanye.">
+    <meta property="twitter:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
     {% endblock metadatas %}
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -45,13 +70,19 @@
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&amp;display=swap" rel="stylesheet">
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3457da429a0f1ae07aea6dbcc/d3ebfa6c34986e7b84d9a426c.js");</script>
+    <script id="mcjs">
+        ! function (c, h, i, m, p) {
+            m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(
+                m, p)
+        }(document, "script",
+            "https://chimpstatic.com/mcjs-connected/js/users/3457da429a0f1ae07aea6dbcc/d3ebfa6c34986e7b84d9a426c.js");
+    </script>
     <!-- Javascript Files -->
 </head>
 
 <body>
-    
-    
+
+
     <div>
 
         {% include 'inc/header.html' %}
@@ -77,6 +108,10 @@
         </script>
         <!--well -->
     </div>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PF9LGMM" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
