--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                                             <li class="clearfix">
                                                 <div class="utf_post_block_style post-float clearfix">
                                                     <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                                                src="{{ post.thumbnail.url }}" alt="{{ post.title }}">
+                                                                src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 90px;width:100%" alt="{{ post.title }}">
                                                         </a>
                                                     </div>
                                                     <div class="utf_post_content">
@@ -103,7 +103,7 @@
                             <li class="clearfix">
                                 <div class="utf_post_block_style post-float clearfix">
                                     <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                                src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 90px;" alt="{{ post.title }}"> </a></div>
+                                                src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 90px;width:100%" alt="{{ post.title }}"> </a></div>
                                     <div class="utf_post_content">
                                         <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
                                                 title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
