--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
 <section class="utf_block_wrapper p-bottom-0">
     <div class="container">
 
-        <div class="utf_featured_tab color-orange">
+        <div class="utf_featured_tab color-blue">
             <h3 class="utf_block_title"><span>Amakuru mashya</span></h3>
             <div class="container">
                 <div class="row">
