--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 {% load user_agents %}
-
+<html lang="rw">
 <head>
     <meta name="author" content="Byosehano">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
