--- a/templates/index.html
+++ b/templates/index.html
@@ -44,79 +44,85 @@
 <!--/ 1rd Block Wrapper Start -->
 <section class="utf_block_wrapper p-bottom-0">
     <div class="container">
+        <div class="row">
 
-        <div class="col-lg-4 col-md-12">
-            <div class="utf_featured_tab color-blue">
-                <h3 class="utf_block_title"><span>Amakuru mashya</span></h3>
-    
-                <div class="utf_list_post_block">
-                    <ul class="utf_list_post">
-    
-                        {% for post in amakurumashya|slice:":8" %}
-    
-                        <li>
-                            <div class="utf_post_block_style post-float clearfix">
-                                <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                            src="{{ post.thumbnail.url }}" style="object-fit: cover;height: 90px;width:100%"
-                                            alt="{{ post.title }}">
-                                    </a>
-                                </div>
-                                <div class="utf_post_content">
-                                    <h2 class="utf_post_title title-small"> <a
-                                            href="{{ post.get_absolute_url }}">{{ post.title|slice:":70" }}...</a>
-                                    </h2>
-                                    <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a
-                                                href="#">{{ post.author.username|title }}</a></span>
-                                        <span class="utf_post_date"><i
-                                                class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        {% endfor %}
-                    </ul>
-    
-    
-    
-                </div>
-            </div>
-        </div>
+            <div class="col-md-12">
+                <div class="utf_featured_tab color-blue">
+                    <h3 class="utf_block_title"><span>Amakuru mashya</span></h3>
 
-        <div class="col-lg-4 col-md-12">
-            <div class="sidebar utf_sidebar_right">
-
-                <div class="widget color-default">
-                    <h3 class="utf_block_title"><span>Inkuru zikunzwe</span></h3>
                     <div class="utf_list_post_block">
                         <ul class="utf_list_post">
-                            {% for post in popular_news %}
 
-                            <li class="clearfix">
+                            {% for post in amakurumashya|slice:":8" %}
+
+                            <li>
                                 <div class="utf_post_block_style post-float clearfix">
                                     <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
                                                 src="{{ post.thumbnail.url }}"
                                                 style="object-fit: cover;height: 90px;width:100%"
-                                                alt="{{ post.title }}"> </a></div>
+                                                alt="{{ post.title }}">
+                                        </a>
+                                    </div>
                                     <div class="utf_post_content">
-                                        <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
-                                                title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
+                                        <h2 class="utf_post_title title-small"> <a
+                                                href="{{ post.get_absolute_url }}">{{ post.title|slice:":70" }}...</a>
                                         </h2>
                                         <div class="utf_post_meta"> <span class="utf_post_author"><i
                                                     class="fa fa-user"></i> <a
-                                                    href="#">{{ post.author.username }}</a></span>
-                                            <span class="utf_post_date"><i class="fa fa-eye"></i>{{ post.views }}</span>
+                                                    href="#">{{ post.author.username|title }}</a></span>
+                                            <span class="utf_post_date"><i
+                                                    class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span>
                                         </div>
                                     </div>
                                 </div>
                             </li>
-
-
                             {% endfor %}
-
                         </ul>
+
+
+
                     </div>
                 </div>
+            </div>
 
+            <div class="col-md-12">
+                <div class="sidebar utf_sidebar_right">
+
+                    <div class="widget color-default">
+                        <h3 class="utf_block_title"><span>Inkuru zikunzwe</span></h3>
+                        <div class="utf_list_post_block">
+                            <ul class="utf_list_post">
+                                {% for post in popular_news %}
+
+                                <li class="clearfix">
+                                    <div class="utf_post_block_style post-float clearfix">
+                                        <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
+                                                    src="{{ post.thumbnail.url }}"
+                                                    style="object-fit: cover;height: 90px;width:100%"
+                                                    alt="{{ post.title }}"> </a></div>
+                                        <div class="utf_post_content">
+                                            <h2 class="utf_post_title title-small"> <a
+                                                    href="{{ post.get_absolute_url }}"
+                                                    title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
+                                            </h2>
+                                            <div class="utf_post_meta"> <span class="utf_post_author"><i
+                                                        class="fa fa-user"></i> <a
+                                                        href="#">{{ post.author.username }}</a></span>
+                                                <span class="utf_post_date"><i
+                                                        class="fa fa-eye"></i>{{ post.views }}</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+
+                                {% endfor %}
+
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
