--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,22 +56,9 @@
 </head>
 
 <body>
-    <div class="vfx-loader">
-        <div class="loader-wrapper">
-            <div class="loader-content">
-                <div class="loader-dot dot-1"></div>
-                <div class="loader-dot dot-2"></div>
-                <div class="loader-dot dot-3"></div>
-                <div class="loader-dot dot-4"></div>
-                <div class="loader-dot dot-5"></div>
-                <div class="loader-dot dot-6"></div>
-                <div class="loader-dot dot-7"></div>
-                <div class="loader-dot dot-8"></div>
-                <div class="loader-dot dot-center"></div>
-            </div>
-        </div>
-    </div>
 
+
+    <div>
 
         {% include 'inc/header.html' %}
         {% block content %}
@@ -95,7 +82,7 @@
             gtag('config', 'UA-171717652-1');
         </script>
         <!--well -->
-    
+    </div>
 
 </body>
 
