--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -70,18 +70,19 @@
 
           <div class="utf_post_content-area">
             <div class="entry-content">
+              
+              {{ post.body|safe }}
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <!-- link_article_ase -->
               <ins class="adsbygoogle"
-                  style="display:block; text-align:center;"
-                  data-ad-layout="in-article"
-                  data-ad-format="fluid"
+                  style="display:block"
                   data-ad-client="ca-pub-3242762948116825"
-                  data-ad-slot="1510628928"></ins>
+                  data-ad-slot="5571681914"
+                  data-ad-format="link"
+                  data-full-width-responsive="true"></ins>
               <script>
                   (adsbygoogle = window.adsbygoogle || []).push({});
               </script>
-              {{ post.body|safe }}
-                
               <!-- Go to www.addthis.com/dashboard to customize your tools -->
               <div class="addthis_inline_share_toolbox_hjqg"></div>
 
