--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -95,6 +95,17 @@
                 {% endfor %}
               </div>
             </div>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <!-- link_article_ase -->
+              <ins class="adsbygoogle"
+                  style="display:block"
+                  data-ad-client="ca-pub-3242762948116825"
+                  data-ad-slot="5571681914"
+                  data-ad-format="link"
+                  data-full-width-responsive="true"></ins>
+              <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
           </div>
         </div>
 
