--- a/templates/layout.html
+++ b/templates/layout.html
@@ -82,6 +82,9 @@
             gtag('config', 'UA-171717652-1');
         </script>
         <!--well -->
+        {% block dij %}
+          
+        {% endblock dij %}
     </div>
 
 </body>
