--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  
+<script async src='https://cse.google.com/cse.js?cx=partner-pub-3242762948116825:bk80lqgxitc'></script><div class="gcse-searchresults-only"></div>
 {% endblock content %}
