--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -26,7 +26,7 @@
 {% endblock metadatas %}
 
 {% block dij %}
-<script async type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5d76150985115dd4"></script>
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=sop' async='async'></script>
 {% endblock dij %}
 
 {% block content %}
@@ -65,8 +65,6 @@
                   class="fa fa-comments-o"></i> <a href="#"
                   class="comments-link"><span>{{ post.comments.count }}</span></a></span> </div>
 
-            <!-- Go to www.addthis.com/dashboard to customize your tools -->
-            <div class="addthis_inline_share_toolbox_hjqg"></div>
 
           </div>
 
@@ -95,8 +93,6 @@
               <script>
                   (adsbygoogle = window.adsbygoogle || []).push({});
               </script>
-              <!-- Go to www.addthis.com/dashboard to customize your tools -->
-              <div class="addthis_inline_share_toolbox_hjqg"></div>
 
             </div>
             <div class="tags-area clearfix">
