--- a/templates/index.html
+++ b/templates/index.html
@@ -3,213 +3,99 @@
 {% load humanize %}
 {% load user_agents %}
 
-{% block content %}
 
-
+{% block dij %}
 {% if not request|is_mobile %}
+<script>
+    window.CSRF_TOKEN = "{{ csrf_token }}";
+    (function ($) {
+        $('#lazyLoadLink').on('click', function () {
+            var link = $(this);
+            var page = link.data('page');
+            $.ajax({
+                type: 'post',
+                url: '/lazy_load_posts/',
+                data: {
+                    'page': page,
+                    'csrfmiddlewaretoken': window.CSRF_TOKEN // from index.html
+                },
+                success: function (data) {
+                    // if there are still more pages to load,
+                    // add 1 to the "Load More Posts" link's page data attribute
+                    // else hide the link
+                    if (data.has_next) {
+                        link.data('page', page + 1);
+                    } else {
+                        link.hide();
+                    }
+                    var fi = "</div><div class='gap-40'></div><div class='row'>";
+                    // append html to the posts div
+                    $('#posts').append(data.posts_html + fi);
+                },
+                error: function (xhr, status, error) {
+                    // shit happens friends!
+                }
+            });
+        });
+    }(jQuery));
+</script>
+{% else %}
+<script>
+    window.CSRF_TOKEN = "{{ csrf_token }}";
+
+    $(window).scroll(function () {
+        if ($(window).scrollTop() + $(window).height() > $(document).height() - 100) {
+            var link = $("#lazyLoadLink");
+            var page = link.data('page');
+            $.ajax({
+                type: 'post',
+                url: '/lazy_load_posts/',
+                data: {
+                    'page': page,
+                    'csrfmiddlewaretoken': window.CSRF_TOKEN // from index.html
+                },
+                success: function (data) {
+                    // if there are still more pages to load,
+                    // add 1 to the "Load More Posts" link's page data attribute
+                    // else hide the link
+                    if (data.has_next) {
+                        link.data('page', page + 1);
+                    } else {
+                        link.hide();
+                    }
+                    var fi = "</div><div class='gap-40'></div><div class='row'>";
+                    // append html to the posts div
+                    $('#posts').append(data.posts_html + fi);
+                },
+                error: function (xhr, status, error) {
+                    // shit happens friends!
+                }
+            });
+        }
+    });
+</script>
+{% endif %}
+
+{% endblock dij %}
+
+{% block content %}
 <!--/ Latest News Area Start -->
 <section class="utf_latest_new_area pb-bottom-20">
     <div class="container">
-        <div class="row">
-
-            {% for post in amakurumashya|slice:":8" %}
-            <div class="col-md-3">
-                <div class="utf_post_block_style clearfix">
-                    <div class="utf_post_thumb" onclick="location.href='{{ post.get_absolute_url }}';"
-                        style="cursor: pointer;"> <a href="#"><img class="img-fluid" src="{{ post.thumbnail.url }}"
-                                style="object-fit: cover;height: 200px;" alt="{{ post.title }}"></a> </div>
-                    <a class="utf_post_cat" href="{{ post.get_absolute_url }}">{{ post.category.name }}</a>
-                    <div class="utf_post_content">
-                        <h2 class="utf_post_title title-medium"> <a
-                                href="{{ post.get_absolute_url }}">{{ post.title|slice:":80" }}...</a> </h2>
-                        <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i>
-                                <a href="#">{{ post.author.username|title }}</a></span> <span class="utf_post_date"><i
-                                    class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span> </div>
-                    </div>
-                </div>
-            </div>
-            {% if forloop.counter == 4 %}
-        </div>
-        <div class="gap-40"></div>
-        <div class="row">
-            {% endif %}
-
-
-            {% endfor %}
+        <div class="row" id="posts">
+            {% include "inc/posts.html" %}
         </div>
     </div>
-
-    </div>
-</section>
-{% else %}
-<!--/ 1rd Block Wrapper Start -->
-<section class="utf_block_wrapper p-bottom-0">
     <div class="container">
-        <div class="row">
-
-            <div class="col-md-12">
-                <div class="utf_featured_tab color-blue">
-                    <h3 class="utf_block_title"><span>Amakuru mashya</span></h3>
-
-                    <div class="utf_list_post_block">
-                        <ul class="utf_list_post">
-
-                            {% for post in amakurumashya|slice:":8" %}
-
-                            <li>
-                                <div class="utf_post_block_style post-float clearfix">
-                                    <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                                src="{{ post.thumbnail.url }}"
-                                                style="object-fit: cover;height: 90px;width:100%"
-                                                alt="{{ post.title }}">
-                                        </a>
-                                    </div>
-                                    <div class="utf_post_content">
-                                        <h2 class="utf_post_title title-small"> <a
-                                                href="{{ post.get_absolute_url }}">{{ post.title|slice:":70" }}...</a>
-                                        </h2>
-                                        <div class="utf_post_meta"> <span class="utf_post_author"><i
-                                                    class="fa fa-user"></i> <a
-                                                    href="#">{{ post.author.username|title }}</a></span>
-                                            <span class="utf_post_date"><i
-                                                    class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            {% endfor %}
-                        </ul>
-
-
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-12">
-                <div class="sidebar utf_sidebar_right">
-
-                    <div class="widget color-default">
-                        <h3 class="utf_block_title"><span>Inkuru zikunzwe</span></h3>
-                        <div class="utf_list_post_block">
-                            <ul class="utf_list_post">
-                                {% for post in popular_news %}
-
-                                <li class="clearfix">
-                                    <div class="utf_post_block_style post-float clearfix">
-                                        <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                                    src="{{ post.thumbnail.url }}"
-                                                    style="object-fit: cover;height: 90px;width:100%"
-                                                    alt="{{ post.title }}"> </a></div>
-                                        <div class="utf_post_content">
-                                            <h2 class="utf_post_title title-small"> <a
-                                                    href="{{ post.get_absolute_url }}"
-                                                    title="{{ post.title }}">{{ post.title|slice:":50" }}...</a>
-                                            </h2>
-                                            <div class="utf_post_meta"> <span class="utf_post_author"><i
-                                                        class="fa fa-user"></i> <a
-                                                        href="#">{{ post.author.username }}</a></span>
-                                                <span class="utf_post_date"><i
-                                                        class="fa fa-eye"></i>{{ post.views }}</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-
-
-                                {% endfor %}
-
-                            </ul>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--/ 1rd Block Wrapper End -->
-{% endif %}
-
-<!--/ 1rd Block Wrapper Start -->
-<section class="utf_block_wrapper p-bottom-0">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="block color-dark-blue">
-                    <h3 class="utf_block_title"><span>Imikino</span></h3>
-                    <div class="utf_list_post_block">
-                        <ul class="utf_list_post">
-                            {% for post in imikino|slice:":5" %}
-                            <li class="clearfix">
-                                <div class="utf_post_block_style post-float clearfix">
-                                    <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img
-                                                class="img-fluid" src="{{ post.thumbnail.url }}"
-                                                style="object-fit: cover;height: 90px;" alt="{{ post.title }}"
-                                                alt="{{ post.title }}">
-                                        </a> </div>
-                                    <div class="utf_post_content">
-                                        <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
-                                                title="{{ post.title }}">{{ post.title|slice:":50" }}...</a> </h2>
-
-                                        {% if not request|is_mobile %}
-                                        <div class="utf_post_meta">
-                                            {{ post.body|striptags|safe|slice:':110' }}...
-                                        </div>
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="block color-dark-blue">
-                    <h3 class="utf_block_title"><span>Imyindagaduro</span></h3>
-                    <div class="utf_list_post_block">
-                        <ul class="utf_list_post">
-                            {% for post in enterntainment|slice:":5" %}
-
-                            <li>
-                                <div class="utf_post_block_style post-float clearfix">
-                                    <div class="utf_post_thumb"> <a href="{{ post.get_absolute_url }}"> <img
-                                                class="img-fluid" src="{{ post.thumbnail.url }}"
-                                                style="object-fit: cover;height: 90px;" alt="{{ post.title }}"
-                                                alt="{{ post.title }}">
-                                        </a> </div>
-                                    <div class="utf_post_content">
-                                        <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}"
-                                                title="{{ post.title }}">{{ post.title|slice:":50" }}...</a> </h2>
-
-                                        {% if not request|is_mobile %}
-                                        <div class="utf_post_meta">
-                                            {{ post.body|striptags|safe|slice:':110' }}...
-                                        </div>
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            </li>
-
-                            {% endfor %}
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-12">
-                <br>
-            </div>
+        <div class="col-md-12" style="text-align: center;">
+            <a id="lazyLoadLink" class="btn btn-lg btn-primary" href="javascript:void(0);" data-page="2">izindi
+                nkuru</a>
         </div>
     </div>
 
     </div>
 </section>
-<!--/ 1rd Block Wrapper End -->
+
 
 
 {% endblock content %}
