--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,8 @@
                     } else {
                         link.hide();
                     }
-                    var ade="<script async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js'></script><ins class='adsbygoogle'style='display:block'data-ad-client='ca-pub-3242762948116825'data-ad-slot='2782038480'data-ad-format='auto'data-full-width-responsive='true'></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>";
+                    var ade="<ins class='adsbygoogle'style='display:block'data-ad-client='ca-pub-3242762948116825'data-ad-slot='2782038480'data-ad-format='auto'data-full-width-responsive='true'></ins>";
+
                     var fi = "</div><div class='gap-40'></div><div class='row'>"+ade;
                     // append html to the posts div
                     $('#posts').append(data.posts_html + fi);
