--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -83,13 +83,11 @@
               </script>
               {{ post.body|safe }}
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-              <!-- link_article_ase -->
               <ins class="adsbygoogle"
                   style="display:block"
+                  data-ad-format="autorelaxed"
                   data-ad-client="ca-pub-3242762948116825"
-                  data-ad-slot="5571681914"
-                  data-ad-format="link"
-                  data-full-width-responsive="true"></ins>
+                  data-ad-slot="6139822818"></ins>
               <script>
                   (adsbygoogle = window.adsbygoogle || []).push({});
               </script>
