--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,7 @@
                     } else {
                         link.hide();
                     }
-                    var ade="<ins class='adsbygoogle'style='display:block'data-ad-client='ca-pub-3242762948116825'data-ad-slot='2782038480'data-ad-format='auto'data-full-width-responsive='true'></ins>";
-
+                    var ade="<ins class='adsbygoogle' style='display:block' data-ad-format='fluid' data-ad-layout-key='-6z+dq-2b-5m+sy' data-ad-client='ca-pub-3242762948116825' data-ad-slot='8360051228'></ins>";
                     var fi = "</div><div class='gap-40'></div><div class='row'>"+ade;
                     // append html to the posts div
                     $('#posts').append(data.posts_html + fi);
