--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -76,7 +76,7 @@
                   style="display:block"
                   data-ad-client="ca-pub-3242762948116825"
                   data-ad-slot="5571681914"
-                  data-ad-format="link"
+                  data-ad-format="auto"
                   data-full-width-responsive="true"></ins>
               <script>
                   (adsbygoogle = window.adsbygoogle || []).push({});
