--- a/templates/inc/posts.html
+++ b/templates/inc/posts.html
@@ -16,5 +16,6 @@
         </div>
     </div>
 </div>
+<ins class='adsbygoogle' style='display:block' data-ad-format='fluid' data-ad-layout-key='-6z+dq-2b-5m+sy' data-ad-client='ca-pub-3242762948116825' data-ad-slot='8360051228'></ins>
 
 {% endfor %}
