--- a/templates/index.html
+++ b/templates/index.html
@@ -3,68 +3,57 @@
 {% load humanize %}
 {% load user_agents %}
 
-
-{% block dij %}
-<script>
-    window.CSRF_TOKEN = "{{ csrf_token }}";
-    (function ($) {
-        $('#lazyLoadLink').on('click', function () {
-            var link = $(this);
-            var page = link.data('page');
-            $.ajax({
-                type: 'post',
-                url: '/lazy_load_posts/',
-                data: {
-                    'page': page,
-                    'csrfmiddlewaretoken': window.CSRF_TOKEN // from index.html
-                },
-                beforeSend:function (){
-                    $("#lazyLoadLink").html("tegereza gato...");
-                },
-                success: function (data) {
-                    // if there are still more pages to load,
-                    // add 1 to the "Load More Posts" link's page data attribute
-                    // else hide the link
-                    if (data.has_next) {
-                        link.data('page', page + 1);
-                    } else {
-                        link.hide();
-                    }
-                    var ade="<ins class='adsbygoogle' style='display:block' data-ad-format='fluid' data-ad-layout-key='-6z+dq-2b-5m+sy' data-ad-client='ca-pub-3242762948116825' data-ad-slot='8360051228'></ins>";
-                    var fi = "</div><div class='gap-40'></div><div class='row'>"+ade;
-                    // append html to the posts div
-                    $('#posts').append(data.posts_html + fi);
-                    $("#lazyLoadLink").html("izindi nkuru");
-                },
-                error: function (xhr, status, error) {
-                    // shit happens friends!
-                }
-            });
-        });
-    }(jQuery));
-</script>
-
-{% endblock dij %}
-
 {% block content %}
+    <!-- Start Main Default News Area -->
+        <section class="main-default-news-area">
+            <div class="container">
+                <div class="row">
+                    {% for post in posts %}
+                        {% if forloop.counter != 3 %}
 
-<!--/ Latest News Area Start -->
-<section class="utf_latest_new_area pb-bottom-20">
-    <div class="container">
-        <div class="row" id="posts">
-            {% include "inc/posts.html" %}
-        </div>
-    </div>
-    <div class="container">
-        <div class="col-md-12" style="text-align: center;">
-            <a id="lazyLoadLink" class="btn btn-lg btn-primary" href="javascript:void(0);" data-page="2">izindi
-                nkuru</a>
-        </div>
-    </div>
+                            {% if forloop.counter == 1 or forloop.counter == 4 %}
+                                <div class="col-lg-3">
+                            {% endif %}
 
-    </div>
-</section>
+                            <div class="single-main-default-news">
+                                <a href="#">
+                                    <img src="{{ post.thumbnail.url }}" alt="image">
+                                </a>
+                                <div class="news-content">
+                                    <div class="tag">{{ post.category.name }}</div>
+                                    <h3>
+                                        <a href="#">{{ post.body|striptags|slice:":100" }}</a>
+                                    </h3>
+                                    <span>{{ post.publish|naturalday }}</span>
+                                </div>
+                            </div>
+                            {% if forloop.counter == 2 or forloop.counter == 5 %}
+                                </div>
+                            {% endif %}
+                        {% else %}
+                            <div class="col-lg-6">
+                                <div class="single-main-default-news-inner">
+                                    <a href="#">
+                                        <img src="{{ post.thumbnail.url }}" alt="image">
+                                    </a>
+                                    <div class="news-content">
+                                        <div class="tag">{{ post.category.name }}</div>
+                                        <h3>
+                                            <a href="#">{{ post.title|title }}</a>
+                                        </h3>
+                                        <span>{{ post.publish|naturalday }}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
 
 
 
+
+
+                </div>
+            </div>
+        </section>
+        <!-- End Main Default  News Area -->
 {% endblock content %}
