--- a/templates/layout.html
+++ b/templates/layout.html
@@ -284,6 +284,18 @@
         <script src="{% static 'assets/js/wow.min.js' %}"></script>
         <!-- Custom JS -->
         <script src="{% static 'assets/js/main.js' %}"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-171717652-1');
+        </script>
+        <!--well -->
     </body>
 
 <!-- Mirrored from templates.envytheme.com/depan/default/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 21 Nov 2020 20:27:51 GMT -->
