--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                                 <div class="news-content">
                                     <div class="tag">{{ post.category.name }}</div>
                                     <h3>
-                                        <a href="#">{{ post.body|striptags|slice:":100" }}</a>
+                                        <a href="{{ post.get_absolute_url }}">{{ post.title}}</a>
                                     </h3>
                                     <span>{{ post.publish|naturalday }}</span>
                                 </div>
@@ -39,7 +39,7 @@
                                     <div class="news-content">
                                         <div class="tag">{{ post.category.name }}</div>
                                         <h3>
-                                            <a href="#">{{ post.title|title }}</a>
+                                            <a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a>
                                         </h3>
                                         <span>{{ post.publish|naturalday }}</span>
                                     </div>
