--- a/templates/layout.html
+++ b/templates/layout.html
@@ -78,7 +78,7 @@
                     <div class="circle circle-2"></div>
                     <div class="circle circle-3"></div>
                 </div>
-                <span>Loading...</span>
+                <span>Tegereza Gato...</span>
             </div>
         </div>
         <!-- End Preloader -->
