--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
                             <div class="single-main-default-news">
                                 <a href="#">
-                                    <img src="{{ post.thumbnail.url }}" loading="lazy" alt="image" style="height: 180px;">
+                                    <img src="{{ post.thumbnail.url }}" loading="lazy" alt="image" style="height: 190px;width: 100%;object-fit: cover;">
                                 </a>
                                 <div class="news-content">
                                     <div class="tag">{{ post.category.name }}</div>
