--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -44,7 +44,28 @@
                                 <span><a href="#">{{ post.author.username|title }}</a> / {{ post.publish|naturalday }} / <a href="#">{{ post.comments.count }} Comment</a></span>
                                 <h3>{{ post.title|title }}</h3>
                                 <div>
+                                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                                  <!-- link_article_ase -->
+                                  <ins class="adsbygoogle"
+                                      style="display:block"
+                                      data-ad-client="ca-pub-3242762948116825"
+                                      data-ad-slot="5571681914"
+                                      data-ad-format="auto"
+                                      data-full-width-responsive="true"></ins>
+                                  <script>
+                                      (adsbygoogle = window.adsbygoogle || []).push({});
+                                  </script>
                                     {{ post.body|safe }}
+
+                                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                                      <ins class="adsbygoogle"
+                                          style="display:block"
+                                          data-ad-format="autorelaxed"
+                                          data-ad-client="ca-pub-3242762948116825"
+                                          data-ad-slot="6139822818"></ins>
+                                      <script>
+                                          (adsbygoogle = window.adsbygoogle || []).push({});
+                                      </script>
                                 </div>
                             </div>
 
