--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -37,7 +37,7 @@
                     <div class="col-lg-8 col-md-12">
                         <div class="blog-details-desc">
                             <div class="article-image">
-                                <img src="{{ post.thumbnail.url }}" alt="image">
+                                <img src="{{ post.thumbnail.url }}" style="width: 100%;" alt="{{ post.title }}">
                             </div>
 
                             <div class="article-content">
